Attempt to fix radio button alignment

--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,9 @@ main {
   text-align: center;
 
 }
+
+.radio-buttons {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: flex-start;
+}
